--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@
 
     position: absolute;
     bottom: 50px;
-    left: 50%;
+    left: 200px;
+    width: 100px;
+    height: 20px;
+    background-color: #000;
 
 }
