--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+body, html{
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 #paddle{
 
     position: absolute;
@@ -6,5 +13,7 @@
     width: 100px;
     height: 20px;
     background-color: #000;
+    margin: 0px;
+    padding: 0px;
 
 }
