--- a/index.css
+++ b/index.css
@@ -10,9 +10,23 @@ body, html{
     position: absolute;
     bottom: 50px;
     left: 200px;
-    width: 100px;
+    width: 200px;
     height: 20px;
     background-color: #000;
+    margin: 0px;
+    padding: 0px;
+
+}
+
+#ball{
+    border-radius: 50%;
+    position: absolute;
+    bottom: 400px;
+    left: 100px;
+    width: 25px;
+    height: 25px;
+    background-color: #000;
+    text-align:center; 
     margin: 0px;
     padding: 0px;
 
