Add brick rendering, update collision handling, and add test brick
Bricks will now render on the screen with a color assigned according to
remaining strength, and will disappear once their strength reaches 0.
Bricks with a strength of 0 are not removed from the DOM, but are hidden
with css and ignored for collision handling. A test brick has also been
added to demonstrate functionality.

--- a/index.css
+++ b/index.css
@@ -28,3 +28,25 @@ body, html{
     margin: 0px;
     padding: 0px;
 }
+
+.brick{
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+}
+
+.strength-0{
+    display: none;
+}
+
+.strength-1{
+    background-color: #F00;
+}
+
+.strength-2{
+    background-color: #FF0;
+}
+
+.strength-3{
+    background-color: #0F0;
+}
