Add more test bricks, set up screen scaling, and test JSON conversion
Create two rows of test bricks at the top of the board area to better
show board dimensions. Then, standardize board size to 1000 x 750 and
scale all drawing so that the board never goes off the screen.

Additionally, test out JSON conversion functions for potential future
level saving and loading.

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body, html{
+body{
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
@@ -24,6 +24,8 @@ body, html{
     position: absolute;
     margin: 0px;
     padding: 0px;
+    box-sizing: content-box;
+    border: 1px solid #000;
 }
 
 .strength-0{
