Simplify brick generation and replace magic numbers w/ constants
Change brick generation to use a function instead of a list of hardcoded bricks
and change constant values used for scaling into actual named constants.

--- a/index.css
+++ b/index.css
@@ -24,8 +24,8 @@ body{
     position: absolute;
     margin: 0px;
     padding: 0px;
-    box-sizing: content-box;
-    border: 1px solid #000;
+    box-sizing: border-box;
+    border: 1px outset #FFF;
 }
 
 .strength-0{
