--- a/index.css
+++ b/index.css
@@ -15,6 +15,15 @@ body{
     color: #ffffff; 
 }
 
+#hints{
+    margin: 5px;
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    font-style: italic;
+    color: #ffffff; 
+}
+
 #lives{
     margin: 5px;
     position: absolute;
@@ -27,7 +36,7 @@ body{
 #paddle{
     position: absolute;
     border-radius: 25px;
-    background-color: white;
+    background-color: #ffffff;
     margin: 0px;
     padding: 0px;
 }
@@ -35,7 +44,7 @@ body{
 #ball{
     border-radius: 50%;
     position: absolute;
-    background-color: white;
+    background-color: #ffffff;
     margin: 0px;
     padding: 0px;
 }
@@ -45,7 +54,7 @@ body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    border: 1px outset #FFF;
+    border: 1px outset #ffffff;
 }
 
 .strength-0{
