--- a/index.css
+++ b/index.css
@@ -25,7 +25,6 @@ body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    border: 1px outset #FFF;
 }
 
 .strength-0{
@@ -34,12 +33,42 @@ body{
 
 .strength-1{
     background-color: #F00;
+    border: 1px outset #FFF;
 }
 
 .strength-2{
     background-color: #FF0;
+    border: 1px outset #FFF;
 }
 
 .strength-3{
     background-color: #0F0;
+    border: 1px outset #FFF;
+}
+
+.powerup{
+
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+
+}
+
+.powerup-1{
+
+    background-color: #F0F;
+
+}
+
+.powerup-2{
+
+    background-color: #00F;
+
+}
+
+.powerup-3{
+
+    background-color: #0FF;
+
 }
