Allow placing and removing bricks in level editor
Clicking now places and removes bricks in the level editor depending
on whether or not a brick is already present at the specified
location. In order to correctly keep track of added and removed
bricks for the drawing code, the array of bricks in index.ts has been
changed to a Map of integer id's to bricks instead. This will also
allow actual removal of destroyed bricks during gameplay instead of
just hiding them with css, although the code for that is not yet
implemented.

--- a/index.css
+++ b/index.css
@@ -64,7 +64,6 @@ body{
 
 #level-editor-ghost-brick {
     opacity: 0.5;
-    pointer-events:none
 }
 
 .brick{
@@ -73,6 +72,7 @@ body{
     padding: 0px;
     box-sizing: border-box;
     border: 1px outset #ffffff;
+    pointer-events:none;
 }
 
 .strength-0{
