Allow level saving/loading in local storage and add help popup
User-created levels can now be saved into local storage with a user-
provided name, then loaded back out of local storage based on that
same name. Both saving and loading are implemented via modal dialogs,
which can be triggered within the level editor via the "s" and "o"
keys, respectively. The level loading dialog shows a listing of all
the currently-saved levels, which can be searched by typing in the
level name input field. Clicking a level's name in the list will
automatically fill it into the input field.

Due to the addition of several new keyboard shortcuts, information
about the level editor's controls has been moved into a pop-up help
modal, which can be triggered by pressing "h". The controls hint
previously at the top of the level editor has now been replaced with
an explanation of how to show the pop-up.

Some minor changes have also been made to the main game menu to
make the whole game's interface design more consistent.

--- a/index.css
+++ b/index.css
@@ -6,6 +6,12 @@ body{
     background-image: url("images/background.png");
 }
 
+#level-editor-open-list {
+    margin-top: 10px;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
 .header-bar-left{
     text-decoration: underline;
     color: #ffffff; 
