--- a/index.css
+++ b/index.css
@@ -77,27 +77,32 @@ body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    border: 1px outset #ffffff;
+    border: none;
     pointer-events:none;
 }
 
 .strength-0{
-    display: none;
+    border: none !important;
+}
+
+.strength--1{
+    border: none !important;
+}
+
+.strength--2{
+    border: none !important;
 }
 
 .strength-1{
     background-color: #F00;
-    border: 1px outset #FFF;
 }
 
 .strength-2{
     background-color: #FF0;
-    border: 1px outset #FFF;
 }
 
 .strength-3{
     background-color: #0F0;
-    border: 1px outset #FFF;
 }
 
 .powerup{
@@ -106,23 +111,30 @@ body{
     height: 30px;
     border-radius: 50%;
     position: absolute;
+    border: 1px outset #FFF;
+
+}
+
+.powerup-0{
+
+    border: 1px outset #FFF;
 
 }
 
 .powerup-1{
 
-    background-color: #F0F;
+    border: 1px outset #F0F;
 
 }
 
 .powerup-2{
 
-    background-color: #00F;
+    border: 1px outset #00F;
 
 }
 
 .powerup-3{
 
-    background-color: #0FF;
+    border: 1px outset #0FF;
 
 }
