--- a/index.css
+++ b/index.css
@@ -82,18 +82,22 @@ body{
     background-size: 50% auto;
     background-position: center center;
     background-repeat: no-repeat;
+    border: 1px outset #FFF;
 }
 
 .strength-0{
     border: none !important;
+    background-image: none !important;
 }
 
 .strength--1{
     border: none !important;
+    background-image: none !important;
 }
 
 .strength--2{
     border: none !important;
+    background-image: none !important;
 }
 
 .strength-1{
@@ -113,24 +117,21 @@ body{
     height: 30px;
     border-radius: 50%;
     position: absolute;
-    border: 1px outset #FFF;
 }
 
 .powerup-0{
     border: 1px outset #FFF;
+    background-image: none;
 }
 
 .powerup-1{
-    border: 1px outset #F0F;
     background-image: url(./images/super_strength.png);
 }
 
 .powerup-2{
-    border: 1px outset #00F;
     background-image: url(./images/solid_floor.png);
 }
 
 .powerup-3{
-    border: 1px outset #0FF;
     background-image: url(./images/big_paddle.png);
 }
